# sds

./: README.md  __init__ (1).py  __init__ (2).py  __init__.py  ai_provider.py  batch_tab.py  build.bat  build.yml  build_portable.bat  extractor.py  main.py  main_window.py  make_sample_sds.py  make_test_logos.py  normalizer.py  paths.py  prompts.py  pyproject.toml  renderer.py  requirements.txt  review_tab.py  run.py  sds_model.py  sds_parser.py  sds_studio.spec  settings (1).yaml  settings_tab.py  supplier.py  suppliers (1).yaml  suppliers_tab.py  template_config (1).yaml  template_config.py  template_tab.py  test_extraction.py  test_full_pipeline.py
